pDLNA CHANGELOG
(c) 2010-2012 Stefan Heumader
email: stefan@heumader.at
webpage: http://www.pdlna.com

Licened under GPLv3 (see LICENSE file)

-----------------------------------------

Version 0.44.1
xx-Jan-2012

- improved and fixed some bugs in the installation script
- fixed a bug in ContentItem.pm: parent_id() function return {PARENT_ID} value instead of {DATE} value
- fixed a similar bug in ContentDirectory.pm regarding the parent_id() function
- added history for DirectoryListings to PDLNA::Device object
- fixed a problem regarding the different duration notations of audio and video files
- added support for audio mime-types: audio/x-flac
- fixed 'Upper Folder' problem with Samsung TV (handling @parentID filter value in XML request)
- small bugfixes regarding external media items (merged https://github.com/jjYBdx4IL/pDLNA/commit/557c692480fc3dfeb6f20d56997e6d41712c4136 by jjYBdx4IL)
- small changes in documentation regarding external media items (merged https://github.com/jjYBdx4IL/pDLNA/commit/75220bec5e05fcd83664a92cd9a0a45612862988 by jjYBdx4IL)

Version 0.44.0
04-Jan-2012

- changed ContentItem detection from file extension to mime type
- PDLNA::Device.pm improvements regarding fetching the XML description (just once and not our own)
- items are sorted in directory listing
- added support for the following image mime-types: image/gif
- added support for the following audio mime-types: audio/mp4, audio/x-ms-wma
- added support for the following video mime-types: video/mp4, video/mpeg
- fixed 'die' in line 809 of PDLNA::HTTPServer package
- updated copyright year

Version 0.43.0
30-Dec-2011

- added MKV video streaming support
- modified PDLNA::DeviceList and PDLNA::Device to be shared among different threads
- added PDLNA::DeviceList to PDLNA::HTTPServer thread to detect device type for Samsung specific Mime-Type of MKV files (video/x-mkv instead of video/x-matrovska)