@@ -1,1 +1,1 @@
-0.44.0 (2012-Jan-04)
+0.44.11 (2012-Jan-11)
